# cough_count_e2e

./: .gitignore  README.md  pyproject.toml
configs/: edgeai.yaml
scripts/: 01_download_edgeai.py  02_build_manifest_edgeai.py  03_visualize_edgeai.py  04_split_edgeai_subjects.py  05_precompute_edgeai_windows.py  06_check_dataloader.py  07_train_edgeai.py  08_visualize_history.py  09_test_edgeai.py
src/coughcount/: losses.py  paths.py
src/coughcount/audio/: features.py  io.py
src/coughcount/data/: dataset.py  density.py  edgeai.py  sampling.py  splits.py
src/coughcount/evaluation/: edgeai.py
src/coughcount/models/: builder.py  cnn1d.py  crnn.py  tcn.py
src/coughcount/training/: edgeai.py
src/coughcount/utils/: checksum.py  config.py  io.py  runtime.py
src/coughcount/viz/: edgeai.py  history.py
